--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Professional Themes for your Ghost Blog",
   "main": "index.js",
   "scripts": {
+    "setup": "bundle install",
+    "dev": "bundle exec jekyll serve",
+    "build": "bundle exec jekyll build && gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,16 +20,16 @@
   },
   "homepage": "https://github.com/TryGhost/Marketplace#readme",
   "devDependencies": {
-    "autoprefixer": "7.1.6",
-    "cssnano": "3.10.0",
-    "gulp": "3.9.1",
-    "gulp-livereload": "3.8.1",
-    "gulp-postcss": "^7.0.0",
-    "gulp-sourcemaps": "2.6.1",
+    "autoprefixer": "9.5.0",
+    "cssnano": "4.1.10",
+    "gulp": "4.0.0",
+    "gulp-livereload": "4.0.1",
+    "gulp-postcss": "8.0.0",
+    "gulp-sourcemaps": "2.6.5",
     "gulp-util": "3.0.8",
-    "gulp-watch": "4.3.8",
-    "postcss-color-function": "2.0.1",
-    "postcss-custom-properties": "5.0.1",
-    "postcss-easy-import": "1.0.1"
+    "gulp-watch": "5.0.1",
+    "postcss-color-function": "4.0.1",
+    "postcss-custom-properties": "8.0.9",
+    "postcss-easy-import": "3.0.0"
   }
 }
